Fixed padding alignment issue on index portfolio grid index

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,3 +24,8 @@ iframe {
   margin: 0 auto;
   display: block;
 }
+
+#ladder-grid {
+
+	margin-left: 10px;
+}
